# polyml

./: .gitattributes  .gitignore  BuildIntInf.sml  COPYING  Makefile.am  Makefile.in  PPolyML.dsp  PolyImport.vcxproj  PolyML.dsp  PolyML.dsw  PolyML.exe.manifest  PolyML.rc  PolyML.sln  PolyML.vcxproj  README.md  Root.ML  RootArm64.ML  RootInterpreted.ML  RootX86.ML  TODO.txt  buildpolyc  config.guess  config.h.in  configure  configure.ac  dummy.cpp  exportPoly.sml  poly.1  polyc.1  polyc.in  polyexports.h  polyimport.1  polyimport.c  polyml.pyp  polymlArm64.pyp  polymlInterpreted.pyp  polystatistics.h  reconfigureall.sh  resource.h  winconfig.h
PolyImp/: PolyImport.vcxproj
PolyML/: PolyML.vcxproj
PolyPerf/: PolyPerf.cpp  PolyPerf.dsp  PolyPerf.vcxproj
Tests/: RunTests.sml
Tests/Fail/: Test001.ML  Test002.ML  Test003.ML  Test004.ML  Test005.ML  Test006.ML  Test007.ML  Test008.ML  Test009.ML  Test010.ML  Test011.ML  Test012.ML  Test013.ML  Test014.ML  Test015.ML  Test016.ML  Test017.ML  Test018.ML  Test019.ML  Test020.ML  Test021.ML  Test022.ML  Test023.ML  Test024.ML  Test025.ML  Test026.ML  Test027.ML  Test028.ML  Test029.ML  Test030.ML  Test031.ML  Test032.ML  Test033.ML  Test034.ML  Test035.ML  Test036.ML  Test037.ML  Test038.ML  Test039.ML  Test040.ML  (+46 more)
Tests/Succeed/: Test001.ML  Test002.ML  Test003.ML  Test004.ML  Test005.ML  Test006.ML  Test007.ML  Test008.ML  Test009.ML  Test010.ML  Test011.ML  Test012.ML  Test013.ML  Test014.ML  Test015.ML  Test016.ML  Test017.ML  Test018.ML  Test019.ML  Test020.ML  Test021.ML  Test022.ML  Test023.ML  Test024.ML  Test025.ML  Test026.ML  Test027.ML  Test028.ML  Test029.ML  Test030.ML  Test031.ML  Test032.ML  Test033.ML  Test034.ML  Test035.ML  Test036.ML  Test037.ML  Test038.ML  Test039.ML  Test040.ML  (+174 more)
basis/: ASN1.sml  Address.ML  Array.530.sml  Array.560.sml  Array.sml  Array2.530.sml  Array2.sml  Array2Signature.sml  ArraySignature.sml  ArraySliceSignature.sml  BIT_FLAGS.sml  BasicStreamIO.530.sml  BasicStreamIO.sml  BinIO.560.sml  BinIO.sml  BinPrimIO.sml  Bool.560.sml  Bool.sml  BoolArray.530.sml  BoolArray.sml  Byte.sml  CommandLine.560.sml  CommandLine.sml  Date.530.sml  Date.sml  DateSignature.sml  ExnPrinter.560.sml  ExnPrinter.581.sml  ExnPrinter.sml  FinalPolyML.530.sml  FinalPolyML.540.sml  FinalPolyML.541.sml  FinalPolyML.550.sml  FinalPolyML.551.sml  FinalPolyML.552.sml  FinalPolyML.560.sml  FinalPolyML.582.sml  FinalPolyML.590.sml  FinalPolyML.sml  Finalizable.sml  (+168 more)
bootstrap/: Stage1.sml  Stage2.sml  Stage3.sml  Stage4.sml  Stage5.sml  Stage6.sml  Stage7.sml  bootstrap32.txt  bootstrap64.txt
documentation/: Debugging.html  ErrorWarnA.html  IDEProtocol.html  Motif.html  Overview.html  PolyMLMake.html  PolyMLStructure.html  PrettyPrint.html  ReleaseNotes.html  SaveState.html  Signal.html  StandBasis.html  Statistics.html  Threads.html  Windows.html  docstyle.css  main.css  mlEdit.html
documentation/Reference/: Basis.html  Foreign.html  PolyMLCodetree.html  PolyMLCompiler.html  PolyMLDebug.html  PolyMLDebuggerInterface.html  PolyMLException.html  PolyMLMake.html  PolyMLNameSpace.html  PolyMLProfiling.html  PolyMLSaveState.html  PolyMLStatistics.html  PolyMLStructure.html  Signal.html  SingleAssignment.html  Threads.html  Universal.html  Weak.html  XWindows.txt  docstyle.css
documentation/Tutorials/: CInterface.html  WindowsProgramming.html
documentation/Winref/: Bitmap.html  Brush.html  Button.html  Caret.html  Class.html  Clipboard.html  Clipping.html  Color.html  Combobox.html  CommonDialog.html  Cursor.html  DeviceContext.html  Dialog.html  DragDrop.html  Edit.html  Font.html  Globals.html  Icon.html  Keyboard.html  Line.html  ListBox.html  Locale.html  Menu.html  Message.html  MessageBox.html  Metafile.html  Mouse.html  Painting.html  Path.html  Pen.html  Printing.html  Rectangle.html  Reference.html  (+8 more)
driver/: Console.c  Console.h  Makefile.in  PolyControl.h  PolyML.dsp  PolyML.dsw  PolyML.rc  addresses.h  alloc.c  alloc.h  arb.c  arb.h  basicio.c  basicio.h  configure  convert.c  copygc.c  copygc.h  cwd.c  cwd.h  diagnostics.c  diagnostics.h  discgc.c  discgc.h  dlfcn_simple.c  errors.h  foreign.c  foreign.h  gc.c  gc.h  globals.h  i386.asm  i386_dep.c  improve.c  improve.h  int_opcodes.h  interpret.c  interruptpoly.c  io_internal.h  machine_assembly.h  (+48 more)
imports/: polymli386.txt  polymlint.txt  polymlint32in64.txt  polymlint64.txt  polymlppc.txt  polymlsparc.txt  polymlx86_64.txt
interruptpoly/: interruptpoly.c  interruptpoly.dsp
libffi/: Makefile.am  Makefile.in  aclocal.m4  configure  fficonfig.h.in  libffi.dsp  libffi.vcxproj
libpolymain/: Makefile.am  Makefile.in  PolyMainLib.dsp  PolyMainLib.vcxproj  polystub.c
libpolyml/: Console.cpp  Console.h  Makefile.am  Makefile.in  PolyControl.h  PolyLib.dsp  PolyLib.vcxproj  arb.cpp  arb.h  arm64.cpp  arm64assembly.S  basicio.cpp  basicio.h  bitmap.cpp  bitmap.h  bytecode.cpp  bytecode.h  check_objects.cpp  check_objects.h  config.h.in  configure  configure.ac  cpp.hint  diagnostics.cpp  diagnostics.h  elfexport.cpp  elfexport.h  errors.cpp  errors.h  exporter.cpp  exporter.h  foreign.cpp  foreign.h  gc.cpp  gc.h  gc_check_weak_ref.cpp  gc_copy_phase.cpp  gc_mark_phase.cpp  gc_progress.cpp  gc_progress.h  (+109 more)
libpolyml/libffi/: Makefile.am  Makefile.in  aclocal.m4  configure  fficonfig.h.in  libffi.vcxproj
libpolyml/libffi/include/: Makefile.in
libpolyml/libffi/man/: Makefile.in
libpolyml/libffi/msvc32include/: ffi.h
libpolyml/libffi/testsuite/: Makefile.in
m4/: ltdl.m4
mlsource/: BasisCompat.sml  BuildAll.sml  BuildBasis.sml  BuildExport.sml  FromML90.sml  LICENCE  MiniBasis.sml
modules/: Makefile.am  Makefile.in
modules/IntAsIntInf/: Date.sml  Integer.sml  List.sml  Makefile.am  Makefile.in  Word.sml
modules/IntInfAsInt/: Date.sml  Makefile.am  Makefile.in  ROOT.sml  RealStringCvt.sml
modules/intasintinf/: ArrayVector.sml  InputOutput.sml  Makefile.am  Makefile.in  ROOT.sml  RealStringCvt.sml  RunCall.sml  StringChar.sml  Word64.sml  testmod
wininstall/: Licence.rtf  PolyML.wxs  wininstall.dsp  wininstall.vcxproj  wininstall.wixproj
(+488 files in other folders)
